plugins {
    id 'java'
}

group = 'com.kodilla'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
    maven {url 'https://repo.spring.io/milestone'}
}

dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter-api:6.0.0")
    testImplementation("org.junit.jupiter:junit-jupiter-engine:6.0.0")
}

tasks.named('test') {
    useJUnitPlatform()
}
